--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -55,7 +55,7 @@ html(lang="en")
 						h4 Datos personales
 				
 					.col-md-4
-						input.registro.form-control(type='text', placeholder='Nombre (s)')
+						input.registro.form-control(type='text', placeholder='Nombre (s)*')
 					.col-md-4
 						input.registro.form-control(type='text', placeholder='Apellido paterno * ')
 					.col-md-4
@@ -75,12 +75,13 @@ html(lang="en")
 					.col-md-4
 						input.registro.form-control(type='text', placeholder='C.P. *')
 					.col-md-4
-						select.registro.form-control
-							option(value="opcion-1") Colonia * 
-							option(value="opcion-2") b
-							option(value="opcion-3") c
-							option(value="opcion-4") d
-							option(value="opcion-5") e
+						input.registro.form-control(type='text', placeholder='Colonia * ')
+						//- select.registro.form-control
+						//- 	option(value="opcion-1") Colonia * 
+						//- 	option(value="opcion-2") b
+						//- 	option(value="opcion-3") c
+						//- 	option(value="opcion-4") d
+						//- 	option(value="opcion-5") e
 					.col-md-4
 						input.registro.form-control(type='text', placeholder='Delegación/Municipio * ')
 					.col-md-4
@@ -98,7 +99,7 @@ html(lang="en")
 							option(value="opcion-5") e
 				.row
 					.col-md-12.text-center
-						button.registro.btn-lg.btn-solid cotizar
+						button.registro.btn-lg.btn-solid COTIZAR
 		// Modal
 		#myModalAvPriv.modal.fade(tabindex='-1', role='dialog', aria-labelledby='myModalLabel')
 			.modal-dialog(role='document')
