--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -10,6 +10,7 @@ html(lang="en")
 		link(rel="stylesheet",href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css")
 		link(rel='stylesheet', href='https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css')
 		link(rel="stylesheet",href="style.css")
+		link(rel="stylesheet",href="../fonts/font.css")
 	body
 		.callme
 			br
