--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -23,18 +23,23 @@ html(lang="en")
 					.col-md-offset-1.col-md-2.step.complete
 						.ico.registra
 						h3.text-center registro
+						span
 					.col-md-2.step.active
 						.ico.cotiza
 						h3.text-center cotiza
+						span
 					.col-md-2.step
 						.ico.valida
 						h3.text-center cuestionario
+						span
 					.col-md-2.step
 						.ico.contrata
 						h3.text-center contrata
+						span
 					.col-md-2.step
 						.ico.poliza
 						h3.text-center póliza
+						span
 		hr
 		
 		.ayuda.azul(data-toggle='tooltip', data-placement='left', title='aqui tu mensaje')
