--- a/hogar/sass/style.scss
+++ b/hogar/sass/style.scss
@@ -15,17 +15,18 @@ $gris4:#CCCCCC;
 $gris5:#D8D8D8;
 $gris6:#F2F2F2;
 
-$h4Family:sans-serif;
+$fontDefault:'StagSans-Book';
+$h4Family:'StagSans-Medium';
 $h4Size:19px;
 $h4Color:$azul1;
-$pLabelFamily:sans-serif;
+$pLabelFamily:'StagSans-Light';
 $pLabelSize:15px;
 $pLabelColor:$gris3;
 $pLabelW:300;
-$pDatoFamily:sans-serif;
+$pDatoFamily:'StagSans-Book';
 $pDatoSize:30px;;
 $pDatoColor:$gris2;
-$h2SubFamily:sans-serif;
+$h2SubFamily:'StagSans-Book';
 $h2SubW:500;
 $h2SubSize:18px;
 $h2SubColor:$gris2;
@@ -41,8 +42,12 @@ $stepactiveh3:$azul1;
 $stepcompletespanbg:$azul1;
 $stepcompletespan:$azul1;
 $stepcompleteh3:$azul1;
+.booki{
+	font-family: 'booki';
+}
 
 body{
+	font-family: $fontDefault;
 	background: $gris6;
 }
 .callme{
