--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -60,26 +60,35 @@ html(lang="en")
 						h4 Datos personales
 				
 					.col-md-4
+						label.label Nombre(s)
 						input.registro.form-control(type='text', placeholder='Nombre (s)*')
 					.col-md-4
+						label.label Apellido paterno*
 						input.registro.form-control(type='text', placeholder='Apellido paterno * ')
 					.col-md-4
+						label.label Apellido materno*
 						input.registro.form-control(type='text', placeholder='Apellido materno *')
 					.col-md-4
+						label.label Correo electrónico
 						input.registro.form-control(type='text', placeholder='Correo electrónico *')
 				.row
 					.col-md-12
 						h4 Domicilio
 				.row
 					.col-md-4
+						label.label Calle*
 						input.registro.form-control(type='text', placeholder='Calle * ')
 					.col-md-4
+						label.label Número exterior
 						input.registro.form-control(type='text', placeholder='No.Ext *')
 					.col-md-4
+						label.label Número anterior
 						input.registro.form-control(type='text', placeholder='No.Int')
 					.col-md-4
+						label.label Codigo postal
 						input.registro.form-control(type='text', placeholder='C.P. *')
 					.col-md-4
+						label.label Colonia*
 						input.registro.form-control(type='text', placeholder='Colonia * ')
 						//- select.registro.form-control
 						//- 	option(value="opcion-1") Colonia * 
@@ -88,8 +97,10 @@ html(lang="en")
 						//- 	option(value="opcion-4") d
 						//- 	option(value="opcion-5") e
 					.col-md-4
+						label.label Delegacion / Municipio
 						input.registro.form-control(type='text', placeholder='Delegación/Municipio * ')
 					.col-md-4
+						label.label Ciudad
 						input.registro.form-control(type='text', placeholder='Ciudad *')
 				.row
 					.col-md-12
