--- a/vida/jade/index.jade
+++ b/vida/jade/index.jade
@@ -132,28 +132,31 @@ html(lang="en")
 						h2.subt
 							strong Hola XXXXXX
 							, ésta es la mejor opción que encontramos para tí:
-				.bgazul2
-				.row
-					.col-md-6.text-right
-						h4 Suma asegurada:
-					.col-md-6.text-left
-							h4 $0,000
-				br
-				.row
-					.col-md-6.text-right
-						p Suma asegurada por fallecimiento:
-					.col-md-6.text-left
-							p $0,000
-				.row
-					.col-md-6.text-right
-						p Suma asegurada por muerte accidental:
-					.col-md-6.text-left
-							p $0,000
-				.row
-					.col-md-6.text-right
-						p Suma asegurada para gastos funerarios:
-					.col-md-6.text-left
-							p $0,000
+				.bgazul1.r-row
+					.row
+						.col-md-offset-1.col-md-10
+							h1 Protege a tus seres queridos en caso de que llegues a faltar con:
+					br
+					.row
+						.col-md-offset-1.col-md-7
+							h6 - Por fallecimiento:
+						.col-md-4
+							h5 $250,000.°°
+					.row
+						.col-md-offset-1.col-md-7
+							h6 - Adicionales por muerte accidental
+						.col-md-4
+							h5 $250,000.°°
+					.row
+						.col-md-offset-1.col-md-7
+							h6 - Por gastos funerarios
+						.col-md-4
+							h5 $250,000.°°
+					.space
+					.row
+						.col-md-12.text-center
+							h4.text-center Ver detalle del producto
+					.space
 				.row
 					br
 					.col-md-5.text-right
