--- a/vida/jade/index.jade
+++ b/vida/jade/index.jade
@@ -132,6 +132,7 @@ html(lang="en")
 						h2.subt
 							strong Hola XXXXXX
 							, ésta es la mejor opción que encontramos para tí:
+				.space
 				.bgazul1.r-row
 					.row
 						.col-md-offset-1.col-md-10
@@ -158,19 +159,18 @@ html(lang="en")
 							h4.text-center Ver detalle del producto
 					.space
 				.row
-					br
-					.col-md-5.text-right
-						p Elige el tipo de plan:
-					.col-md-3.text-center
+					.col-md-offset-1.col-md-11
+						h2 Tipo de plan:
+					.col-md-offset-1.col-md-2
 						.radio
 							input(type='radio',id="radio",name='tipoPlan',value='Plan-Creciente', class="regular-radio",checked='true')
 							label(for='radio')
-							label Plan Creciente
-					.col-md-3.text-left
+							label Creciente
+					.col-md-2
 						.radio
 							input(type='radio',id="radio-1",name='tipoPlan',value='Plan-fijo', class="regular-radio")
 							label(for='radio-1')
-							label Plan fijo
+							label Fijo
 				.row
 					br
 					.col-md-12
