--- a/hogar/sass/style.scss
+++ b/hogar/sass/style.scss
@@ -155,7 +155,7 @@ ul.list-group{
 	    -webkit-border-radius: 5px;
 		-moz-border-radius: 5px;
 		border-radius: 5px;
-		p.label{
+		p.labelgral{
     	font-size: 13px;
 		}
 		& li.list-group-item{
@@ -168,7 +168,7 @@ ul.list-group{
 	    	font-size: 15px;
 		}
 		& .tp{
-			 p.label{
+			 p.labelgral{
 				color: $azul3;
 			}
 			.badge strong{
@@ -244,7 +244,7 @@ ul.list-group{
 		color: #fff;
 		font-size: 30px;
 	}
-	& p.label{
+	& p.labelgral{
 		color: #fff;
 		font-weight: 100;
 		font-size: 23px;
@@ -346,7 +346,7 @@ ul.list-group{
 	h4{
 		color:$azul6;
 	}
-	p.label{
+	p.labelgral{
 		color:$azul6;
 	}	
 	p.dato{
@@ -365,7 +365,7 @@ ul.list-group{
 	h4{
 		color:$azul6;
 	}
-	p.label{
+	p.labelgral{
 		color:$azul6;
 	}	
 	p.dato{
@@ -527,7 +527,7 @@ ul.list-group{
 	}
 
 }
-.label{
+.labelgral{
 	font-family: $pLabelFamily;
 	font-size:$pLabelSize;
 	color: $pLabelColor;
