--- a/hogar/jade/index.jade
+++ b/hogar/jade/index.jade
@@ -60,35 +60,35 @@ html(lang="en")
 						h4 Datos personales
 				
 					.col-md-4
-						label.label Nombre(s)
+						label.labelgral Nombre(s)
 						input.registro.form-control(type='text', placeholder='Nombre (s)*')
 					.col-md-4
-						label.label Apellido paterno*
+						label.labelgral Apellido paterno*
 						input.registro.form-control(type='text', placeholder='Apellido paterno * ')
 					.col-md-4
-						label.label Apellido materno*
+						label.labelgral Apellido materno*
 						input.registro.form-control(type='text', placeholder='Apellido materno *')
 					.col-md-4
-						label.label Correo electrónico
+						label.labelgral Correo electrónico
 						input.registro.form-control(type='text', placeholder='Correo electrónico *')
 				.row
 					.col-md-12
 						h4 Domicilio
 				.row
 					.col-md-4
-						label.label Calle*
+						label.labelgral Calle*
 						input.registro.form-control(type='text', placeholder='Calle * ')
 					.col-md-4
-						label.label Número exterior
+						label.labelgral Número exterior
 						input.registro.form-control(type='text', placeholder='No.Ext *')
 					.col-md-4
-						label.label Número anterior
+						label.labelgral Número anterior
 						input.registro.form-control(type='text', placeholder='No.Int')
 					.col-md-4
-						label.label Codigo postal
+						label.labelgral Codigo postal
 						input.registro.form-control(type='text', placeholder='C.P. *')
 					.col-md-4
-						label.label Colonia*
+						label.labelgral Colonia*
 						input.registro.form-control(type='text', placeholder='Colonia * ')
 						//- select.registro.form-control
 						//- 	option(value="opcion-1") Colonia * 
@@ -97,10 +97,10 @@ html(lang="en")
 						//- 	option(value="opcion-4") d
 						//- 	option(value="opcion-5") e
 					.col-md-4
-						label.label Delegacion / Municipio
+						label.labelgral Delegacion / Municipio
 						input.registro.form-control(type='text', placeholder='Delegación/Municipio * ')
 					.col-md-4
-						label.label Ciudad
+						label.labelgral Ciudad
 						input.registro.form-control(type='text', placeholder='Ciudad *')
 				.row
 					.col-md-12
@@ -207,7 +207,7 @@ html(lang="en")
 								button.btn.btn-info.bigbutton(type='button')
 									.triangulo
 									h4  $ 250.00
-									p.label Mensual
+									p.labelgral Mensual
 							.col-md-6
 								ul.list-group
 									.triangulo
@@ -215,19 +215,19 @@ html(lang="en")
 									li.list-group-item
 										span.badge 
 											strong $250.00
-										p.label + 
+										p.labelgral + 
 											strong 11
 											span  pago subsecuente de:
 									li.list-group-item.tp
 										span.badge 
 											strong $3,000.00
-										p.label Total a pagar:
+										p.labelgral Total a pagar:
 						.row.plan
 							.col-md-5
 								button.btn.btn-info.bigbutton(type='button')
 									.triangulo
 									h4 $ 750.00
-									p.label Trimestral
+									p.labelgral Trimestral
 							.col-md-6
 								ul.list-group
 									.triangulo
@@ -235,19 +235,19 @@ html(lang="en")
 									li.list-group-item
 										span.badge 
 											strong $750.00
-										p.label + 
+										p.labelgral + 
 											strong 3
 											span  pago subsecuente de:
 									li.list-group-item.tp
 										span.badge 
 											strong $3,000.00
-										p.label Total a pagar:
+										p.labelgral Total a pagar:
 						.row.plan
 							.col-md-5
 								button.btn.btn-info.bigbutton(type='button')
 									.triangulo
 									h4 $ 1,500.00 
-									p.label Semestral
+									p.labelgral Semestral
 							.col-md-6
 								ul.list-group
 									.triangulo
@@ -255,19 +255,19 @@ html(lang="en")
 									li.list-group-item
 										span.badge 
 											strong $1,500.00
-										p.label + 
+										p.labelgral + 
 											strong 1
 											span  pago subsecuente de:
 									li.list-group-item.tp
 										span.badge 
 											strong $3,000.00
-										p.label Total a pagar:
+										p.labelgral Total a pagar:
 						.row.plan
 							.col-md-5
 								button.btn.btn-info.bigbutton(type='button')
 									.triangulo
 									h4 $ 3,000.00 
-									p.label Anual		
+									p.labelgral Anual		
 							.col-md-6
 								ul.list-group
 									.triangulo
@@ -275,7 +275,7 @@ html(lang="en")
 									li.list-group-item
 										span.badge 
 											strong $3,000.00
-										p.label Como 
+										p.labelgral Como 
 											strong pago único 
 											span de:
 											br
@@ -283,7 +283,7 @@ html(lang="en")
 									li.list-group-item.tp
 										span.badge 
 											strong $3,000.00
-										p.label Total a pagar:
+										p.labelgral Total a pagar:
 					.col-md-6
 						h2.subt Pagos por prima
 						h4 Sin terremoto			
@@ -292,7 +292,7 @@ html(lang="en")
 								button.btn.btn-info.bigbutton(type='button')
 									.triangulo
 									h4 $ 200.00 
-									p.label Mensual
+									p.labelgral Mensual
 							.col-md-6
 								ul.list-group
 									.triangulo
@@ -300,19 +300,19 @@ html(lang="en")
 									li.list-group-item
 										span.badge 
 											strong $200.00
-										p.label + 
+										p.labelgral + 
 											strong 11
 											span  pago subsecuente de:
 									li.list-group-item.tp
 										span.badge 
 											strong $2,400.00
-										p.label Total a pagar:
+										p.labelgral Total a pagar:
 						.row.plan
 							.col-md-5
 								button.btn.btn-info.bigbutton(type='button')
 									.triangulo
 									h4 $ 800.00 
-									p.label Trimestral
+									p.labelgral Trimestral
 							.col-md-6
 								ul.list-group
 									.triangulo
@@ -320,19 +320,19 @@ html(lang="en")
 									li.list-group-item
 										span.badge 
 											strong $800.00
-										p.label + 
+										p.labelgral + 
 											strong 3
 											span  pago subsecuente de:
 									li.list-group-item.tp
 										span.badge 
 											strong $2,400.00
-										p.label Total a pagar:
+										p.labelgral Total a pagar:
 						.row.plan
 							.col-md-5
 								button.btn.btn-info.bigbutton(type='button')
 									.triangulo
 									h4 $ 1,200.00 
-									p.label Semestral
+									p.labelgral Semestral
 							.col-md-6
 								ul.list-group
 									.triangulo
@@ -340,19 +340,19 @@ html(lang="en")
 									li.list-group-item
 										span.badge 
 											strong $1,200.00
-										p.label + 
+										p.labelgral + 
 											strong 1
 											span  pago subsecuente de:
 									li.list-group-item.tp
 										span.badge 
 											strong $2,400.00
-										p.label Total a pagar:
+										p.labelgral Total a pagar:
 						.row.plan
 							.col-md-5
 								button.btn.btn-info.bigbutton(type='button')
 									.triangulo
 									h4 $ 2,400.00 
-									p.label Anual		
+									p.labelgral Anual		
 							.col-md-6
 								ul.list-group
 									.triangulo
@@ -360,7 +360,7 @@ html(lang="en")
 									li.list-group-item
 										span.badge 
 											strong $2,400.00
-										p.label Como 
+										p.labelgral Como 
 											strong pago único 
 											span de:
 											br
@@ -368,7 +368,7 @@ html(lang="en")
 									li.list-group-item.tp
 										span.badge 
 											strong $2,400.00
-										p.label Total a pagar:
+										p.labelgral Total a pagar:
 				.row
 					br
 					br
@@ -413,7 +413,7 @@ html(lang="en")
 						strong NO
 				.row
 					.col-md-8
-						p.label ¿El inmueble por asegurar se encuentra auna distancia menor a 500 metros respecto a cualquier fuente de agua (lago, río, mar, etc.)?
+						p.labelgral ¿El inmueble por asegurar se encuentra auna distancia menor a 500 metros respecto a cualquier fuente de agua (lago, río, mar, etc.)?
 					.col-md-2
 						.radio.text-center
 							input(type='radio',id="radio-C1",name='cuestionarioP1',value='si', class="regular-radio",checked='true')
@@ -424,7 +424,7 @@ html(lang="en")
 							label(for='radio-Cp1')
 				.row
 					.col-md-8
-						p.label ¿Los muros están construidos de tabique, ladrillo, block o concreto armado?
+						p.labelgral ¿Los muros están construidos de tabique, ladrillo, block o concreto armado?
 					.col-md-2
 						.radio.text-center
 							input(type='radio',id="radio-C2",name='cuestionarioP2',value='si', class="regular-radio",checked='true')
@@ -435,7 +435,7 @@ html(lang="en")
 							label(for='radio-Cp2')
 				.row
 					.col-md-8
-						p.label ¿Los techos están construidos de concreto armado o bóveda de ladrillo?
+						p.labelgral ¿Los techos están construidos de concreto armado o bóveda de ladrillo?
 					.col-md-2
 						.radio.text-center
 							input(type='radio',id="radio-C3",name='cuestionarioP3',value='si', class="regular-radio",checked='true')
@@ -460,7 +460,7 @@ html(lang="en")
 									h4 Casa
 							.col-md-12.casa
 								.col-md-8.text-right
-									p.label
+									p.labelgral
 										strong ¿Cuántos pisos tiene la casa?
 								.col-md-3
 									input.form-control(type='text', placeholder='# Pisos ')
@@ -474,12 +474,12 @@ html(lang="en")
 									h4 Departamento
 							.col-md-12.edificio
 								.col-md-8.text-right
-									p.label
+									p.labelgral
 										strong ¿Cuántos pisos tiene el edificio?
 								.col-md-3
 									input.form-control(type='text', placeholder='# Pisos ')
 								.col-md-8.text-right
-									p.label
+									p.labelgral
 										strong ¿En qué piso vives?
 								.col-md-3
 									input.form-control(type='text', placeholder='# Pisos ')
@@ -532,36 +532,36 @@ html(lang="en")
 						.col-md-8
 							.col-md-6
 								.form-group
-									p.label Apellido Paterno
+									p.labelgral Apellido Paterno
 									input.form-control(type="text",placeholder="Email")
 								.form-group
-									p.label Nombre(s)
+									p.labelgral Nombre(s)
 									input.form-control(type="text",placeholder="Nombre(s)")
 								.form-group
-									p.label CURP*
+									p.labelgral CURP*
 									input.form-control(type="text",placeholder="CURP")
 								.form-group
-									p.label Correo electronico
+									p.labelgral Correo electronico
 									input.form-control(type="text",placeholder="Correo electronico")
 							.col-md-6
 								.form-group
-									p.label Apellido Materno
+									p.labelgral Apellido Materno
 									input.form-control(type="text",placeholder="Apellido Materno")
 							.col-md-6
 								.form-inline
-									p.label Genero*
+									p.labelgral Genero*
 									br
-									p.label
+									p.labelgral
 										input(type='radio',id="radio-cs",name='optionsRadios', value='femenino', checked='' class="regular-radio")
 										label(for='radio-cs')
 										| Femenino
-									p.label
+									p.labelgral
 										input(type='radio',id="radio-cs2",name='optionsRadios', value='masculino',class="regular-radio")
 										label(for='radio-cs2')
 										| Masculino
 								.space
 								.form-group
-									p.label R.F.C*
+									p.labelgral R.F.C*
 									input.form-control(type="text",placeholder="RFC")
 							.row
 								.col-md-12
@@ -569,22 +569,22 @@ html(lang="en")
 										h4 Domicilio
 									.col-md-6
 										.form-group
-											p.label Calle
+											p.labelgral Calle
 											input.form-control(type="text",placeholder="Calle")
 									.col-md-3
 										.form-group
-											p.label No. Exterior
+											p.labelgral No. Exterior
 											input.form-control(type="text",placeholder="Apellido Materno")
 									.col-md-3
 										.form-group
-											p.label no. Int
+											p.labelgral no. Int
 											input.form-control(type="text",placeholder="No. Int")
 									.col-md-6
 										.form-group
-											p.label C.P*
+											p.labelgral C.P*
 											input.form-control(type="text",placeholder="Codigo postal")
 									.col-md-6
-										p.label Colonia
+										p.labelgral Colonia
 										select.form-control
 											option(value="opcion-1") Colonia
 											option(value="opcion-2") b
@@ -593,23 +593,23 @@ html(lang="en")
 											option(value="opcion-5") e
 									.col-md-6
 										.form-group
-											p.label Delegación/municipio
+											p.labelgral Delegación/municipio
 											input.form-control(type="text",placeholder="Delegación/municipio")
 									.col-md-6
 										.form-group
-											p.label Ciudad
+											p.labelgral Ciudad
 											input.form-control(type="text",placeholder="Ciudad")
 									.col-md-6
 										.form-group
-											p.label Estado
+											p.labelgral Estado
 											input.form-control(type="text",placeholder="Estado")
 									.col-md-6
 										.form-group
-											p.label Teléfono fijo
+											p.labelgral Teléfono fijo
 											input.form-control(type="text",placeholder="Teléfono fijo")
 									.col-md-6
 										.form-group
-											p.label Teléfono movil
+											p.labelgral Teléfono movil
 											input.form-control(type="text",placeholder="Teléfono movil")
 							.col-md-12
 								.form-inline
@@ -633,21 +633,21 @@ html(lang="en")
 							ul.list-group
 								li.list-group-item
 									span.badge $1,200.00
-									p.label Cobertura
+									p.labelgral Cobertura
 								li.list-group-item
 									span.badge $1,200.00
-									p.label Cobertura
+									p.labelgral Cobertura
 							br
 							ul.list-group
 								li.list-group-item
 									span.badge mensual
-									p.label Periodo
+									p.labelgral Periodo
 								li.list-group-item
 									span.badge mensual
-									p.label Periodo
+									p.labelgral Periodo
 								li.list-group-item
 									span.badge mensual
-									p.label Periodo
+									p.labelgral Periodo
 							.space
 							.col-md-12.text-center
 								button.btn-lg.btn-borde CAMBIAR COTIZACIÓN
@@ -672,12 +672,12 @@ html(lang="en")
 		//- 				.col-md-12.text-center
 		//- 					.col-md-3
 		//- 					.col-md-5
-		//- 						p.label Número telefonico
+		//- 						p.labelgral Número telefonico
 		//- 						input#contrata.form-control(type='text' placeholder='55-98-98-98')
 		//- 				.col-md-12.text-center
 		//- 					.col-md-3
 		//- 					.col-md-5
-		//- 						p.label Horario a contactar
+		//- 						p.labelgral Horario a contactar
 		//- 						input#contrata.form-control(type='text' placeholder='12:00-16:00')
 		//- 				button.btn-lg.btn-borde CONTACTARME
 		//- 			//.modal-footer
@@ -700,29 +700,29 @@ html(lang="en")
 					h4 DATOS DEL CONTRATANTE
 			.row
 				.col-md-3
-					p.label Nombre del cliente
+					p.labelgral Nombre del cliente
 					p.dato XRamiréz Ayala Juan LuisX
 				.col-md-3
-					p.label Género
+					p.labelgral Género
 					p.dato Femenino
 				.col-md-3
-					p.label Fecha de nacimiento
+					p.labelgral Fecha de nacimiento
 					p.dato 23/10/1985
 				.col-md-3
-					p.label País de nacimiento
+					p.labelgral País de nacimiento
 					p.dato México
 			.row
 				.col-md-3
-					p.label Entidad federativa
+					p.labelgral Entidad federativa
 					p.dato CDMX
 				.col-md-3
-					p.label CURP
+					p.labelgral CURP
 					p.dato XRAYU123412MMDH09X
 				.col-md-3
-					p.label RFC
+					p.labelgral RFC
 					p.dato XRAYU123412MMX
 				.col-md-3
-					p.label Correo eléctronico
+					p.labelgral Correo eléctronico
 					p.dato Xjuan@mail.comX
 			.row
 				.col-md-12
@@ -819,11 +819,11 @@ html(lang="en")
 					br
 					.col-md-6
 						.col-md-10
-							p.label Nombre del titular
+							p.labelgral Nombre del titular
 							input#contrata.form-control(type='text' placeholder='Escribe tu nombre')
 					.col-md-6
 						.col-md-10
-							p.label Tipo de tarjeta*
+							p.labelgral Tipo de tarjeta*
 							select.form-control
 								option(value="opcion-1") VISA
 								option(value="opcion-2") b
@@ -832,18 +832,18 @@ html(lang="en")
 				.row
 					.col-md-6
 						.col-md-10
-							p.label No. de tarjeta*
+							p.labelgral No. de tarjeta*
 							input#contrata.form-control(type='text' placeholder='12312341234234123')
 					.col-md-6
 						.col-md-10
-							p.label CVV*
+							p.labelgral CVV*
 								span.ayuda.azul(data-toggle='tooltip', data-placement='right', title='aqui tu mensaje',class="naranja-tooltip")
 
 							input#contrata.form-control(type='text' placeholder='000')
 				.row
 					.col-md-6
 						.col-md-12
-							p.label Fecha de vencimiento*
+							p.labelgral Fecha de vencimiento*
 						.col-md-4
 							select.form-control
 								option(value="opcion-1") 06
@@ -858,7 +858,7 @@ html(lang="en")
 								option(value="opcion-4") d
 					.col-md-6
 						.col-md-12
-							p.label Tarjeta
+							p.labelgral Tarjeta
 						.col-md-3
 							input(type="radio",name='tarjeta',value='BBVA', checked="")
 							label Bancomer
@@ -867,7 +867,7 @@ html(lang="en")
 							label Otros bancos
 				.row
 					.col-md-12
-						p.label Meses sin intereses
+						p.labelgral Meses sin intereses
 					.col-md-12
 						.col-md-2
 							input(type="radio",name='meses',value='3', checked="")
